# Calculation-Csharp

./: Install.txt  Makefile  README.md  Команды для просмотра покрытия тестов.txt
CalcWrapper/CalcWrapper/: CalcWrapper.cpp
CalcWrapper/CalcWrapper/Model/: rpn.h
DEBIAN/: control  postinst
SimpleCalc/: SimpleCalc.sln
SimpleCalc/SimpleCalc/: App.axaml  App.axaml.cs  IocSetup.cs  SimpleCalc.csproj  ViewLocator.cs
SimpleCalc/SimpleCalc.Desktop/: Program.cs  SimpleCalc.Desktop.csproj
SimpleCalc/SimpleCalc/Assets/: Styles1.axaml
SimpleCalc/SimpleCalc/Models/: Models.cs
SimpleCalc/SimpleCalc/Styles/: Style.axaml
SimpleCalc/SimpleCalc/ViewModels/: BaseCalculateViewModel.cs  DepositViewModel.cs  HomePageViewModel.cs  MainViewModel.cs  ViewModelBase.cs
SimpleCalc/SimpleCalc/Views/: BaseCalculateView.axaml  BaseCalculateView.axaml.cs  DepositView.axaml  DepositView.axaml.cs  HomePageView.axaml  HomePageView.axaml.cs  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
opt/SmartCalc/: Makefile  test.cpp
opt/SmartCalc/CalcWrapper/: CMakeLists.txt
opt/SmartCalc/CalcWrapper/CalcWrapper/: CMakeLists.txt  CalcWrapper.cpp
opt/SmartCalc/CalcWrapper/CalcWrapper/Model/: calculate.h
opt/SmartCalc/SimpleCalc/: SimpleCalc.sln
opt/SmartCalc/SimpleCalc/SimpleCalc/: App.axaml  App.axaml.cs  SimpleCalc.csproj
opt/SmartCalc/SimpleCalc/SimpleCalc.Desktop/: SimpleCalc.Desktop.csproj
opt/SmartCalc/SimpleCalc/SimpleCalc/Assets/: Icons.axaml
opt/SmartCalc/SimpleCalc/Unit-Tests/: Unit-Tests.csproj  UnitTest1.cs
(+30 files in other folders)
